--- a/scss/_mainPage.scss
+++ b/scss/_mainPage.scss
@@ -1,24 +1,3 @@
-/*!
-Theme Name: Beata Antosik Clinic
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Description
-Version: 1.0.0
-License: GNU General Public License v2 or later
-License URI: LICENSE
-Text Domain: beata-antosik-clinic
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-Beata Antosik Clinic is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
-*/
 
 $darkBlue: #203353;
 $darkGray: #1B2028;
@@ -114,9 +93,27 @@ $lightGrey: #CFD4D5;
     }
 }
 
-.carousel-item{
-    .image-fit{
-        object-fit: cover;
-        height:500px;
+.single-slide-div{
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    height:500px;
+    .slide-container{
+        height:100%;
+        .slide-text-column{
+            height:100%;
+            .text-div{
+                position:absolute;
+                top:50%;
+                transform: translateY(-50%);
+                color:white;
+                h1{
+                    text-align:right;
+                }
+                p{
+                    text-align:justify;
+                }
+            }
+        }
     }
 }
