--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,7 @@
 @import 'mainPage';
+@import 'footerStyle';
+
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
