--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,58 @@
-.navbar .collapse .nav--container .navbar-nav .nav-item .dropdown-menu .dropdown-item, .navbar .collapse .nav--container .navbar-nav .nav-link, .navbar .collapse .reservation-btn {
+.navbar .collapse .nav--container .navbar-nav .nav-item .dropdown-menu .dropdown-item, .navbar .collapse .nav--container .navbar-nav .nav-link, .navbar .collapse .reservation-btn, .custom-btn {
   font-size: 1rem;
   font-weight: 400;
   line-height: 100%;
 }
 
-.navbar .collapse .reservation-btn {
+.single-slide-div .slide-container .slide-text-column .text-div p, p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.navbar .collapse .reservation-btn, .custom-btn {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
-  border-color: #203353;
-  background-color: #203353;
+  border-color: transparent !important;
+  background-color: #203353 !important;
   color: white;
   padding: 16px 30px;
   transition: 0.2 ease-in-out;
 }
 
-.navbar .collapse .reservation-btn:hover {
-  background-color: #fff;
-  color: #203353;
+.navbar .collapse .reservation-btn:hover, .custom-btn:hover {
+  background-color: #253c63 !important;
+  color: white;
+}
+
+.full-width-padding h2:before {
+  content: "";
+  display: inline-block;
+  width: 4px;
+  height: 1.9rem;
+  margin-right: 10px;
+  background-color: #CFD4D5;
 }
 
 * {
   font-family: "Open Sans", sans-serif;
 }
 
+p {
+  color: #203353;
+}
+
+h2 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  line-height: normal;
+  letter-spacing: 0.2rem;
+  color: #203353;
+}
+
 @media screen and (min-width: 1155px) {
   .navbar {
-    padding: 1.5rem 2.5rem;
+    padding: 55px 2.5rem;
   }
 }
 .navbar .navbar-brand {
@@ -86,7 +113,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  height: 500px;
+  height: calc(100vh - 140px);
 }
 .single-slide-div .slide-container {
   height: 100%;
@@ -98,13 +125,121 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  color: white;
+}
+@media screen and (min-width: 1200px) {
+  .single-slide-div .slide-container .slide-text-column .text-div {
+    padding-left: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .single-slide-div .slide-container .slide-text-column .text-div {
+    padding: 20px;
+  }
 }
 .single-slide-div .slide-container .slide-text-column .text-div h1 {
+  text-transform: uppercase;
   text-align: right;
+  font-size: 2.8rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  line-height: normal;
+  color: #203353;
+}
+.single-slide-div .slide-container .slide-text-column .text-div h2 {
+  text-transform: uppercase;
+  text-align: right;
+  font-size: 2.4rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+  line-height: 1.7rem;
+  color: #203353;
 }
 .single-slide-div .slide-container .slide-text-column .text-div p {
   text-align: justify;
+  color: #203353;
+}
+.single-slide-div .slide-container .slide-text-column .text-div p:before {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 100%;
+  background-color: rgba(27, 32, 40, 0.1);
+  margin: 20px 0px;
+}
+.single-slide-div .slide-container .slide-text-column .text-div .custom-btn {
+  float: right;
+}
+
+.full-width-padding {
+  padding: 20px;
+}
+@media screen and (min-width: 768px) {
+  .full-width-padding {
+    padding: 80px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .full-width-padding .main-left-column {
+    padding-right: 40px;
+  }
+  .full-width-padding .main-right-column {
+    padding-left: 40px;
+  }
+}
+.full-width-padding h2 {
+  padding-bottom: 70px;
+  margin: 0;
+}
+@media screen and (max-width: 992px) {
+  .full-width-padding h2 {
+    padding: 20px 0px;
+  }
+}
+.footer {
+  background-color: #203353;
+  color: white;
+}
+
+.footer-content-container {
+  padding: 200px 0px;
+}
+
+.footer-cell {
+  height: 110px;
+  position: relative;
+}
+.footer-cell img {
+  max-width: 80%;
+  position: absolute;
+  top: -6px;
+}
+.footer-cell p {
+  position: absolute;
+  bottom: 0;
+  color: white;
+}
+@media screen and (max-width: 767.9px) {
+  .footer-cell {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+}
+.footer-cell a {
+  font-size: 2rem;
+  color: white;
+}
+.footer-cell .social-icon-div {
+  position: absolute;
+  top: -6px;
+}
+.footer-cell strong {
+  font-size: 1rem;
+}
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /*# sourceMappingURL=style.css.map */
